Try to fix height issues on mobile phones for mpu

--- a/src/scss/modules/_mpu.scss
+++ b/src/scss/modules/_mpu.scss
@@ -10,7 +10,7 @@ body.mpu-open {
 }
 .mpu {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     overflow-x: auto;
     padding-bottom: $md;
 
